Position:relative for content yielded to layout Previously, content yielded to body and individually positioned to prevent overlap with nav. Content is now yielded to a div already positioned to prevent overlap.

--- a/source/css/blog.scss
+++ b/source/css/blog.scss
@@ -1,5 +1,2 @@
 aside {
-    position: relative;
-    color: black;
-    top: 40px;
 }
