--- a/source/css/resume.scss
+++ b/source/css/resume.scss
@@ -7,9 +7,12 @@ html {
     font-size: 13px;
 }
 
+#page-contents {
+    top: 100px;
+}
+
 main {
     background-color: #FFF;
-    top: 100px;
     font-family: "Open Sans Condensed", sans-serif;
     color: black;
     width: 100%;
