--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -19,6 +19,12 @@ body {
     z-index: -1;
 }
 
+#page-contents {
+    top: 40px;
+    position: relative;
+    width: 100%;
+}
+
 h2 {
     margin: 0;
 }
@@ -61,8 +67,6 @@ nav {
 }
 
 main {
-    position: relative;
-    top: 40px;
     color: white;
     padding: 0;
     h2 {
